force-app/main/default/objects/QCC_Platform_Event_Switch__c/QCC_Platform_Event_Switch__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To Enable/ Disable features by using this custom setting</description>
    <label>QCC Platform Event Switch</label>
</CustomObject>