force-app/main/default/objects/QCC_Platform_Event_Switch__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Module Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>