force-app/main/default/objects/QCC_Platform_Event_Switch__c/fields/Platform_Event__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event__c</fullName>
    <description>The API name of the platform event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Platform Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>