force-app/main/default/objects/QCC_Platform_Event_Switch__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>