force-app/main/default/objects/QCC_Platform_Event_Switch__c/listViews/All_Platform_Events.listView-meta.xml
<ListView>
    <fullName>All_Platform_Events</fullName>
    <columns>NAME</columns>
    <columns>Module_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Tier__c</columns>
    <columns>Platform_Event__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Platform Events</label>
</ListView>